lib/macosx-universal/OpenCV_3rdParty_CMakeGenConfigs/2.4.6/otoolDumps.md
#### otool -L libopencv_calib3d.2.4.6.dylib
libopencv_calib3d.2.4.6.dylib:  
> @loader_path/libopencv_calib3d.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_core.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_imgproc.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_flann.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_highgui.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_features2d.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
/System/Library/Frameworks/OpenCL.framework/Versions/A/OpenCL (compatibility version 1.0.0, current version 1.0.0)  
/usr/lib/libstdc++.6.dylib (compatibility version 7.0.0, current version 56.0.0)  
/usr/lib/libSystem.B.dylib (compatibility version 1.0.0, current version 169.3.0)

#### otool -L libopencv_core.2.4.6.dylib
libopencv_core.2.4.6.dylib:  
> @loader_path/libopencv_core.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
/System/Library/Frameworks/OpenCL.framework/Versions/A/OpenCL (compatibility version 1.0.0, current version 1.0.0)  
/usr/lib/libstdc++.6.dylib (compatibility version 7.0.0, current version 56.0.0)  
/usr/lib/libSystem.B.dylib (compatibility version 1.0.0, current version 169.3.0)

#### otool -L libopencv_features2d.2.4.6.dylib
libopencv_features2d.2.4.6.dylib:  
> @loader_path/libopencv_features2d.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_core.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_imgproc.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_flann.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_highgui.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
/System/Library/Frameworks/OpenCL.framework/Versions/A/OpenCL (compatibility version 1.0.0, current version 1.0.0)  
/usr/lib/libstdc++.6.dylib (compatibility version 7.0.0, current version 56.0.0)  
/usr/lib/libSystem.B.dylib (compatibility version 1.0.0, current version 169.3.0)

#### otool -L libopencv_flann.2.4.6.dylib
libopencv_flann.2.4.6.dylib:  
> @loader_path/libopencv_flann.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_core.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
/System/Library/Frameworks/OpenCL.framework/Versions/A/OpenCL (compatibility version 1.0.0, current version 1.0.0)  
/usr/lib/libstdc++.6.dylib (compatibility version 7.0.0, current version 56.0.0)  
/usr/lib/libSystem.B.dylib (compatibility version 1.0.0, current version 169.3.0)

#### otool -L libopencv_highgui.2.4.6.dylib
libopencv_highgui.2.4.6.dylib:  
> @loader_path/libopencv_highgui.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_core.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_imgproc.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
/System/Library/Frameworks/Cocoa.framework/Versions/A/Cocoa (compatibility version 1.0.0, current version 19.0.0)  
/System/Library/Frameworks/QTKit.framework/Versions/A/QTKit (compatibility version 1.0.0, current version 1.0.0)  
/System/Library/Frameworks/QuartzCore.framework/Versions/A/QuartzCore (compatibility version 1.2.0, current version 1.8.0)  
/System/Library/Frameworks/AppKit.framework/Versions/C/AppKit (compatibility version 45.0.0, current version 1187.39.0)  
/System/Library/Frameworks/OpenCL.framework/Versions/A/OpenCL (compatibility version 1.0.0, current version 1.0.0)  
/usr/lib/libstdc++.6.dylib (compatibility version 7.0.0, current version 56.0.0)  
/usr/lib/libSystem.B.dylib (compatibility version 1.0.0, current version 169.3.0)  
/System/Library/Frameworks/CoreFoundation.framework/Versions/A/CoreFoundation (compatibility version 150.0.0, current version 744.19.0)  
/usr/lib/libobjc.A.dylib (compatibility version 1.0.0, current version 228.0.0)  
/System/Library/Frameworks/CoreVideo.framework/Versions/A/CoreVideo (compatibility version 1.2.0, current version 1.8.0)  
/System/Library/Frameworks/Foundation.framework/Versions/C/Foundation (compatibility version 300.0.0, current version 945.18.0)

#### otool -L libopencv_imgproc.2.4.6.dylib
libopencv_imgproc.2.4.6.dylib:  
> @loader_path/libopencv_imgproc.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
@loader_path/libopencv_core.2.4.6.dylib (compatibility version 2.4.0, current version 2.4.6)  
/System/Library/Frameworks/OpenCL.framework/Versions/A/OpenCL (compatibility version 1.0.0, current version 1.0.0)  
/usr/lib/libstdc++.6.dylib (compatibility version 7.0.0, current version 56.0.0)  
/usr/lib/libSystem.B.dylib (compatibility version 1.0.0, current version 169.3.0)